refinacao do codigo e add comentarios

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="mb-2">
             <label for="formGroupExampleInput2" class="form-label">TEXTO</label>
             <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="insira somente texto">
-            <span id="exibicao2">Array com texto exibido aqui</span>
+            <span id="exibicao2">Array com textos exibido aqui</span>
         </div>
 
         <div class="btn-group" role="group" aria-label="Basic outlined example">
@@ -40,6 +40,7 @@
         <br>
         <br>
         <br>
+        <span id="indicacao">Edite seus Arrays aqui</span>
         <div class="geral">
             <ul id="listaGeral"></ul>
         </div>
